swim_client/src/configuration/tests/resources/invalid/parse-err-config.recon
@config {
    @client {
        buffer_size: 2
        router: **invalid
    }
}